--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -4,7 +4,7 @@
             <h1 class="mat-display-1">Fill in the form</h1>
             <form [formGroup]="profileForm" (ngSubmit)="onSubmit(profileForm)">
                 <mat-form-field>
-                    <input matInput type="text" name="First Name" formControlName="firstName" placeholder="First Name">
+                    <input matInput type="text" formControlName="firstName" placeholder="First Name">
                 </mat-form-field>
                 <mat-form-field>
                     <input matInput type="text" formControlName="lastName" placeholder="Last Name">
@@ -16,7 +16,7 @@
                     <input matInput type="email" formControlName="email" placeholder="Email">
                 </mat-form-field>
                 <mat-form-field>
-                    <input matInput type="number" formControlName="phone" placeholder="Phone">
+                    <input matInput type="text" formControlName="phone" placeholder="Phone" value="+43 ">
                 </mat-form-field>
                 <button type="submit" mat-raised-button [disabled]="profileForm.invalid">Get info</button>
             </form>
